<resources>
    <string name="app_name">Tabungan App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="step_1">Step 1</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="step_2">Step 2</string>
    <string name="finish">Finish</string>
    <string name="result">Result</string>
    <string name="congratulation">Congratulation</string>
    <string name="done">Done</string>
    <string name="teks">Halo $name, untuk melanjutkan register silahkan isi password dibawah</string>
    <string name="welcome">Selamat datang $name</string>
    <string name="no_telp">No. Telp</string>
    <string name="back_to_login">Back To Login</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="beranda">Beranda</string>
    <string name="note">Note</string>
    <string name="note_fragment">Note Fragment</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="jumlah">Jumlah</string>
    <string name="rp_0">Rp.0,-</string>
    <string name="keterangan">Keterangan</string>
    <string name="tabungan">Tabungan</string>
    <string name="total">Total</string>
    <string name="logout">Logout</string>
    <string name="loading">  Loading...</string>
</resources>