<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent"
    tools:context=".View.Register1Fragment">



    <TextView
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step_1"
        android:textSize="20dp"
        android:textColor="#000"
        android:drawableStart="@drawable/ic_back"
        android:padding="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:context=".MainFragment">


        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="#000000"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border_grey"
            android:hint="@string/name"
            android:padding="10dp"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/edEmail"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border_grey"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="14dp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_blue"
            android:text="@string/next"
            android:textColor="#fff" />


    </LinearLayout>



</RelativeLayout>