<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bg"
    android:layout_height="match_parent"
    tools:context=".View.ResultFragment">

    <TextView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="20dp"
        android:textColor="#000"
        android:drawableStart="@drawable/ic_back"
        android:padding="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:context=".MainFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/congratulation"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:textColor="#000"
            android:background="@drawable/border_grey"
            android:padding="10dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/border_grey"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_blue"
            android:text="@string/back_to_login"
            android:textColor="#fff" />


    </LinearLayout>




</RelativeLayout>